# KHAOSZ

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENCE  READEME.md  README.md  asset.py  batch_generate.py  benchmark.py  chat.py  docker-compose.yml  environment.yml  generate.py  generate_ar.py  generate_batch.py  generate_dpo.py  generate_retrieve.py  generate_retrive.py  pyproject.toml  q  readme.md  requirements.txt  setup.py  sft_train.py  train.py  train_log.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  lint.yml  spell-check.yml  tests.yml
assets/docs/: README-zh-CN.md  architecture.md  dataflow.md  design.md  inference.md  introduction.md  kvcache.md  params.md  preprocessing.md  training.md
astrai/: __init__.py  factory.py  preprocess.py  protocols.py  serialization.py
astrai/config/: __init__.py  base.py  model_config.py  param_config.py  preprocess_config.py  schedule_config.py  train_config.py
astrai/core/: factory.py
astrai/data/: __init__.py  dataset.py  serialization.py  tokenizer.py
astrai/dataset/: __init__.py  dataset.py  sampler.py  storage.py
astrai/inference/: __init__.py  cache.py  core.py  engine.py  executor.py  generator.py  sample.py  sampling.py  scheduler.py  server.py  task.py
astrai/model/: __init__.py  automodel.py  encoder.py  module.py  transformer.py
astrai/parallel/: __init__.py  backend.py  executor.py  module.py  setup.py
astrai/preprocessing/: __init__.py  builder.py  pipeline.py
astrai/tokenize/: __init__.py  chat_template.py  tokenizer.py  trainer.py
astrai/tokenizer/: __init__.py  chat_template.py
astrai/trainer/: __init__.py  metric_util.py  optim.py  schedule.py  strategy.py  train_callback.py  train_context.py  trainer.py
demo/: download.py  generate_ar.py  generate_batch.py  generate_retrieve.py  stream_chat.py
khaosz/: __init__.py  api.py  khaosz.py  model.py  retriever.py
khaosz/config/: __init__.py  model_config.py  param_config.py  schedule_config.py  train_config.py
khaosz/core/: __init__.py  cache_util.py  generator.py  parameter.py  tokenizer.py  (+1 more)
module/: __init__.py  generate.py  generater.py  generation.py  retriever.py  tokenizer.py  transfomer.py  transformer.py
params/: config.json  download.py  tokenizer.json
scripts/: chat.py  docker.sh  download.py  generate_ar.py  generate_batch.py  generate_dpo.py  generate_retrieve.py  pre_commit.sh  stream_chat.py  train.py
tests/: conftest.py  test_callbacks.py  test_dataset.py  test_dataset_loader.py  test_early_stopping.py  test_module.py  test_parallel.py  test_sampler.py  test_tie_weight.py  test_tokenizer.py  test_train_config.py  test_train_strategy.py  test_trainer.py
tools/: benchmark.py  generate.py  perplexity.py  train.py
trainer/: __init__.py  dataset.py  dpo_dataset.py  optimizer.py  trainer.py
(+99 files in other folders)
