[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "khaosz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py==3.15.1",
    "numpy==2.3.2",
    "torch==2.7.1",
    "tokenizers==0.21.4",
    "tqdm==4.67.1",
    "safetensors==0.5.3",
    "huggingface-hub==0.34.3",
]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

keywords = ["nlp", "datasets", "language-models", "machine-learning"]
license = ["GPL-3.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/khaosz/khaosz" }

[tool.setuptools.packages.find]
where = ["."]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cu126" 

[tool.setuptools.dynamic]
version = { attr = "khaosz.__version__" }